2025-06-03T02:06:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15406875118 # 1320
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-03
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3609 / 0 3610 / +0 +1

2025-06-02T02:10:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15382266901 # 1318
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-02
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3608 / 0 3609 / +0 +1

2025-05-30T12:53:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15347216847 # 1313
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-05-30
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3606 / 0 3608 / +0 +2

2025-05-29T02:04:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15314598399 # 1310
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-05-29
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3604 / 0 3606 / +0 +2

2025-05-28T02:05:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15289816879 # 1308
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-05-28
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3603 / 0 3604 / +0 +1

2025-05-26T12:51:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15254429522 # 1305