@@ -1,3 +1,9 @@
+2025-06-03T12:55:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15417885290 # 1321
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-03
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3610 / 0 3611 / +0 +1
+
 2025-06-03T02:06:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15406875118 # 1320
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-03
